master: Add secret for clarity

--- a/setup-infrastructure.yaml
+++ b/setup-infrastructure.yaml
@@ -16,6 +16,8 @@ variables:
   # Domain name
   domainName: "example.com"
 
+  #  apiToken: "<secret>" <--- This secret variable is defined in the Azure DevOps UI
+
   # Location of terraform code
   terraformDirectory: "$(Build.SourcesDirectory)/terraform"
 
